1.大津法处理后的图像与原灰度图在IPS200上可以成功显示（大津法对于灰度图没有预处理，没有加图像滤波算法，降噪算法）

--- a/D_car_2025/D_car_2025/mdk/mm32f327x_g8p.uvprojx
+++ b/D_car_2025/D_car_2025/mdk/mm32f327x_g8p.uvprojx
@@ -420,6 +420,11 @@
               <FileType>1</FileType>
               <FilePath>..\code\key.c</FilePath>
             </File>
+            <File>
+              <FileName>Image Binarization.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\code\Image Binarization.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -506,6 +511,9 @@
               <FilePath>..\..\libraries\zf_common\zf_common_typedef.h</FilePath>
             </File>
           </Files>
+        </Group>
+        <Group>
+          <GroupName>zf_components</GroupName>
         </Group>
         <Group>
           <GroupName>zf_driver</GroupName>
