1.添加了电机、编码器的框架 2.IMU的姿态解算还有问题

--- a/D_car_2025/D_car_2025/mdk/mm32f327x_g8p.uvprojx
+++ b/D_car_2025/D_car_2025/mdk/mm32f327x_g8p.uvprojx
@@ -425,6 +425,21 @@
               <FileType>1</FileType>
               <FilePath>..\code\Image Binarization.c</FilePath>
             </File>
+            <File>
+              <FileName>encoder.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\code\encoder.c</FilePath>
+            </File>
+            <File>
+              <FileName>motor.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\code\motor.c</FilePath>
+            </File>
+            <File>
+              <FileName>imu660rb.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\code\imu660rb.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
