--- a/D_car_2025/D_car_2025/mdk/mm32f327x_g8p.uvprojx
+++ b/D_car_2025/D_car_2025/mdk/mm32f327x_g8p.uvprojx
@@ -440,6 +440,16 @@
               <FileType>1</FileType>
               <FilePath>..\code\imu660rb.c</FilePath>
             </File>
+            <File>
+              <FileName>pid.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\code\pid.c</FilePath>
+            </File>
+            <File>
+              <FileName>imu963ra.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\code\imu963ra.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
